base model summarization with distilbart

--- a/src/colab.ipynb
+++ b/src/colab.ipynb
@@ -2,40 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pypdf import PdfReader\n",
+    "from parser import Parser\n",
+    "from summarizer import Summarizer\n",
+    "import torch\n",
     "\n",
-    "reader = PdfReader(\"../QLoRA.pdf\")\n",
-    "number_of_pages = len(reader.pages)\n",
-    "\n",
-    "text = \"\"\n",
-    "for page in reader.pages:\n",
-    "    text += page.extract_text()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Markdown content has been written to QLoRA.md\n"
-     ]
-    }
-   ],
-   "source": [
-    "markdown_file_path = 'QLoRA.md'\n",
-    "\n",
-    "with open(markdown_file_path, 'w') as file:\n",
-    "    file.write(text)\n",
-    "\n",
-    "print(f\"Markdown content has been written to {markdown_file_path}\")"
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
    ]
   },
   {
@@ -43,7 +18,25 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "paper_url = \"https://arxiv.org/pdf/2305.14314\"\n",
+    "paper = Parser.parse(paper_url)\n",
+    "\n",
+    "model = Summarizer(device=device)\n",
+    "result = model.summarize(paper)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "with open(\"summary.md\", \"w\") as f:\n",
+    "    f.write(result)"
+   ]
   }
  ],
  "metadata": {
